# rinora-mud

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  clippy.toml  diesel.toml  docker-compose.yaml  dockerfile  notes.md
base/: Cargo.toml
base/src/: enums.rs  events.rs  gmcp.rs  helpers.rs  lib.rs  models.rs  resources.rs  stream_processor.rs
base/src/commands/: character_was_selected.rs  confirm_account_password.rs  create_account_password.rs  create_character.rs  create_character_command.rs  look_at.rs  look_at_room.rs  mod.rs  move_to_room.rs  password_created.rs  password_provided.rs  provide_account_password.rs  provide_character_name.rs  provide_create_character_name.rs  provide_username.rs  say_command.rs  select_character.rs  select_create_character.rs  selected_create_character.rs  user_confirmed_password.rs  username_provided.rs
base/src/helpers/: mod.rs  send_room_descriptions.rs
base/src/output/: character_name_invalid.rs  character_not_found.rs  character_was_created.rs  display_character_entering_room.rs  display_character_exists.rs  display_character_logged_into_room.rs  display_prompt.rs  display_room_on_entering.rs  display_room_to_user.rs  get_login_screen.rs  handle_generic_error.rs  invalid_command.rs  invalid_direction.rs  mod.rs  passwords_dont_match.rs  please_confirm_password.rs  prompt_for_character_name.rs  provide_username.rs  send_prompt_to_user.rs  send_text_to_entity.rs  show_character_logging_in.rs  show_login_screen.rs  show_prompt.rs  unable_to_locate_account.rs  user_account_created.rs  username_does_not_exist.rs  username_exists.rs  username_invalid.rs
base/src/systems/: add_character_commands.rs  add_character_to_room.rs  add_expected_account_commands.rs  add_expected_commands.rs  add_selected_character_to_world.rs  check_username_and_transition_user.rs  create_character_selected.rs  create_new_character.rs  create_new_user.rs  display_prompt.rs  handle_disconnect.rs  handle_entities_talking.rs  handle_new_connections.rs  handle_user_login.rs  log_character_into_game.rs  log_character_into_room.rs  log_user_in_on_password.rs  mod.rs  move_entity_to_room.rs  move_entity_to_room_via_event.rs  password_was_provided.rs  passwords_do_not_match.rs  process_entities_that_want_to_move.rs  process_gmcp_data.rs  process_gmcp_requests.rs  process_incoming_commands.rs  process_outgoing_data.rs  process_text_events_for_users.rs  remove_logging_in_tags.rs  run_user_commands.rs  send_heard_to_user.rs  spawn_character_in_room.rs  start_listening.rs  transfer_from_server_to_game.rs  unable_to_locate_account.rs  username_invalid.rs  username_invalid_move_user_to_needsusername.rs
database/: Cargo.toml
database/migrations/2023-09-26-004138_initialize-mud/: down.sql  up.sql
database/src/: characters.rs  db_interface.rs  lib.rs  locations.rs  rooms.rs  schema.rs  settings.rs  system.rs  testing.rs  users.rs
database/src/datastore/: character.rs
database/src/game/: character.rs
database/src/importers/: rooms.rs
rinora_mud/: Cargo.toml
rinora_mud/src/: commands.rs  display.rs  enums.rs  events.rs  lib.rs  main.rs  models.rs  resources.rs  world.rs
server/: Cargo.toml  README.md
server/src/: gmcp.rs  lib.rs  outgoingtext.rs
src/: main.rs  (+1 more)
(+167 files in other folders)
