[package]
name = "base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false }
database = { path = "../database" }
helper = { path = "../helper" }
networking = { path = "../networking" }
serde_json = "1.0"
shared = { path = "../shared" }
