[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" }
serde = { version = "1.0.188" }
sha2 = { version = "0.10.7" }
shared = { path = "../shared" }

[dependencies.mongodb]
version = "2.7.0-beta"
features = ["tokio-sync"]
