[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", default-features = false }
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.1.0" }
sha2 = { version = "0.10.7" }
shared = { path = "../shared" }
