[package]
name = "rinora_mud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" }
account = { path = "../account" }
database = { path = "../database" }
server = { path = "../server" }
shared = { path = "../shared" }
