[package]
name = "rinora_mud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2" }
database = { path = "../database" }
helper = { path = "../helper" }
shared = { path = "../shared" }
