[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = false } # We don't need to build the window management code
shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }